sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:13: error: value ToDouble is not a member of Int
      gap = (gap.ToDouble / 1.3).ToInt;
                 ^AlgCombSort:15: error: not found: value i
    i=0;
    ^AlgCombSort:16: error: not found: value i
    while(i+gap<length)
          ^AlgCombSort:18: error: not found: value i
      if(isSmaller(i,i+gap))
                   ^AlgCombSort:18: error: not found: value i
      if(isSmaller(i,i+gap))
                     ^AlgCombSort:21: error: not found: value i
        swap(i,i+gap);
             ^AlgCombSort:21: error: not found: value i
        swap(i,i+gap);
               ^AlgCombSort:22: error: not found: value i
        i+=1;
        ^