sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var length : Int = getValueCount();
  var gap : Int = length;
  var I : Int = 0;
  var tri : Boolean = true;
  
  while(gap>1 || tri)
  {
    tri=false;
    if(gap>1)
    {
      gap = (gap.ToDouble / 1.3).ToInt;
    }
    i=0;
    while(i+gap<length)
    {
      if(isSmaller(i,i+gap))
      {
        tri=true;
        swap(i,i+gap);
        i+=1;
      }
    }
  }
}
